Bug 462799 - EXR plugin exports grayscale images as RGB in the green channel only
Summary: EXR plugin exports grayscale images as RGB in the green channel only
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 5.1.3
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
Depends on:
Blocks: 461975 288725
  Show dependency treegraph
 
Reported: 2022-12-08 20:49 UTC by amyspark
Modified: 2022-12-12 15:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description amyspark 2022-12-08 20:49:55 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

In 288725 it was allowed to load single channel EXR images as grayscale. However, the wrong channel identifier was used. According to https://lists.aswf.io/g/openexr-dev/topic/82133584?p=Created,,,20,2,0,0::,,,0,0,0,82133584, grayscale images are to be treated as luminance-chrominance images.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Part of bug 461975
Comment 1 amyspark 2022-12-08 20:50:11 UTC
Assigning to myself.
Comment 2 Halla Rempt 2022-12-08 20:51:17 UTC
Good :-)
Comment 3 Bug Janitor Service 2022-12-11 18:53:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1671
Comment 4 amyspark 2022-12-12 15:25:10 UTC
Git commit f2b1f3c526133757f6543859d48d8e32e7fa95a9 by L. E. Segovia.
Committed on 12/12/2022 at 15:23.
Pushed by lsegovia into branch 'master'.

EXR: implement consistent Gray and XYZ exporting

M  +43   -30   plugins/impex/exr/exr_converter.cc

https://invent.kde.org/graphics/krita/commit/f2b1f3c526133757f6543859d48d8e32e7fa95a9
Comment 5 amyspark 2022-12-12 15:27:33 UTC
Git commit 8cbda2d88aaf367a2f9fa730bf30177e6818d002 by L. E. Segovia.
Committed on 12/12/2022 at 15:26.
Pushed by lsegovia into branch 'krita/5.1'.

EXR: implement consistent Gray and XYZ exporting
(cherry picked from commit f2b1f3c526133757f6543859d48d8e32e7fa95a9)

M  +43   -30   plugins/impex/exr/exr_converter.cc

https://invent.kde.org/graphics/krita/commit/8cbda2d88aaf367a2f9fa730bf30177e6818d002