EXR: implement consistent Gray and XYZ exporting

BUG: 462799